--- a/Poker_attempt.ipynb
+++ b/Poker_attempt.ipynb
@@ -7,11 +7,7 @@
         "id": "97355c16-3e09-4185-975e-08c47dd06980"
       },
       "source": [
-        "# Team 3: The Jokers\n",
-        "* Cameron Alonzo\n",
-        "* Jase Bradley\n",
-        "* Jacob Kintigh\n",
-        "* David Vaughan\n"
+        "# Jacob Kintigh\n",
       ]
     },
     {
